--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 #Large files
 *.nc
 *.tif
+
+#Keys
+ee-idsdrr-d856f70748a7.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
