--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,13 @@ earthengine-api==0.1.360
 eerepr==0.0.4
 exceptiongroup==1.1.2
 executing==1.2.0
+Fiona==1.9.4.post1
 folium==0.14.0
 fonttools==4.41.1
 future==0.18.3
 geemap==0.24.4
 geocoder==1.38.1
+geopandas==0.13.2
 google-api-core==2.11.1
 google-api-python-client==2.95.0
 google-auth==2.22.0
@@ -92,6 +94,8 @@ rioxarray==0.14.1
 rsa==4.9
 scooby==0.7.2
 selenium==4.10.0
+shapely==2.0.1
+simplejson==3.19.1
 six==1.16.0
 sniffio==1.3.0
 snuggs==1.4.7
