--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ affine==2.4.0
 asttokens==2.2.1
 attrs==23.1.0
 backcall==0.2.0
+boto3==1.28.43
+botocore==1.31.43
 bqplot==0.12.40
 branca==0.6.0
 cachetools==5.3.1
@@ -50,6 +52,7 @@ ipytree==0.2.2
 ipywidgets==8.0.7
 jedi==0.18.2
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.3.1
 jupyter_client==8.3.0
 jupyter_core==5.3.1
@@ -62,6 +65,7 @@ natsort==8.4.0
 nest-asyncio==1.5.6
 netCDF4==1.6.4
 numpy==1.25.1
+oauth2client==4.1.3
 outcome==1.2.0
 packaging==23.1
 pandas==2.0.3
@@ -78,6 +82,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+PyDrive==1.3.1
 Pygments==2.15.1
 pyparsing==3.0.9
 pyperclip==1.8.2
@@ -87,12 +92,16 @@ PySocks==1.7.1
 python-box==7.0.1
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0.1
 pyzmq==25.1.0
 rasterio==1.3.8
+rasterstats==0.19.0
 ratelim==0.1.6
 requests==2.31.0
 rioxarray==0.14.1
 rsa==4.9
+s3transfer==0.6.2
+scipy==1.11.2
 scooby==0.7.2
 selenium==4.10.0
 shapely==2.0.1
@@ -104,6 +113,7 @@ sortedcontainers==2.4.0
 stack-data==0.6.2
 tenacity==8.2.2
 tornado==6.3.2
+tqdm==4.66.1
 traitlets==5.9.0
 traittypes==0.2.1
 trio==0.22.2
