--- a/requirements.txt
+++ b/requirements.txt
@@ -89,6 +89,7 @@ pyperclip==1.8.2
 pyproj==3.6.0
 pyshp==2.3.1
 PySocks==1.7.1
+pytesseract==0.3.10
 python-box==7.0.1
 python-dateutil==2.8.2
 pytz==2023.3
